# quickrank

./: .gitignore  .gitmodules  CHANGES  CMakeLists.txt  LICENSE  README  README.md  makefile  terrier-copyright.txt
UNSORTED/: ltrdata.cc  main.cc  mart.hpp  matrixnet.cc  matrixnet.h  ot.cc  trie.hpp
UNSORTED/mn_scorer/script/: runme_scoring.sh  scorer.hpp
UNSORTED/mn_scorer/src/: dpset.hpp  main.cpp  makefile  scorer.cpp  scorer.hpp  xmlparser.cpp  xmlparser.hpp
UNSORTED/mn_scorer/src/utils/: bitarray.hpp  qsort.hpp  strutils.hpp  symmatrix.hpp
api-documentation/: quickrank.doxygen
catch-unit-tests/: test-main.cc
catch-unit-tests/data/: test-hdata.cc
catch-unit-tests/learning/forests/: test-lambdamart.cc  test-mart.cc  test-obliviousmart.cc  test-obvlambdamart.cc  test-rankboost.cc
catch-unit-tests/learning/linear/: test-ca.cc  test-line_search.cc
catch-unit-tests/metric/ir/: test-dcg.cc  test-ndcg.cc  test-tndcg.cc
debug/: explode.py  test_all.sh
documentation/: cleaver.html  cleaver.md  quickrank.doxygen  quickscore.md  selective.md  usedby.md  xdart.md
inc/learning/: dpset.h  lmart.h  matrixnet.h  ranker.h
inc/learning/tree/: ensemble.h  histogram.h  rtnode.h
inc/metric/: dcgscorer.h  evaluator.h  mapscorer.h  metricscorer.h  ndcgscorer.h
inc/utils/: bitarray.h  listqsort.h  omp-stubs.h  strutils.h  transpose.h
include/: types.h
include/data/: dataset.h  ltrdata.h  queryresults.h  rankedresults.h  vertical_dataset.h
include/driver/: driver.h
include/io/: Instance.h  generate_conditional_operators.h  generate_oblivious.h  generate_vpred.h  svml.h  vpred.h  xml.h
include/learning/: dpset.h  lambdamart.h  lmart.h  ltr_algorithm.h  ltr_algorithm_factory.h  matrixnet.h  ranker.h
include/learning/custom/: custom_ltr.h
include/learning/forests/: dart.h  dart.h.orig  lambdamart.h  lambdamartsampling.h  lambdamartsampling2.h  lambdamartselective.h  mart.h  matrixnet.h  obliviouslambdamart.h  obliviousmart.h  randomforest.h  rankboost.h  stochasticnegative.h
include/learning/linear/: coordinate_ascent.h  line_search.h
include/learning/meta/: meta_cleaver.h
include/learning/tree/: ensemble.h  ot.h  rt.h  rtnode.h  rtnode.h.orig  rtnode_histogram.h
include/metric/: dcgscorer.h  evaluator.h  mapscorer.h  metric_factory.h  metricfactory.h  metricscorer.h  ndcgscorer.h
include/metric/ir/: dcg.h  map.h  metric.h  ndcg.h  rmse.h  tndcg.h
include/optimization/: optimization.h  optimization_factory.h
include/optimization/post_learning/: post_learning_opt.h
include/optimization/post_learning/cleaver/: cleaver.h  cleaver_factory.h  last_pruning.h  low_weights_pruning.h  quality_loss_adv_pruning.h  quality_loss_pruning.h  random_adv_pruning.h  random_pruning.h  score_loss_pruning.h  skip_pruning.h
include/optimization/post_learning/pruning/: LastPruning.h  LowWeightsPruning.h  QualityLossPruning.h  RandomPruning.h  ScoreLossPruning.h  SkipPruning.h  cleaver.h  ensemble_pruning.h  ensemble_pruning_factory.h  last_pruning.h  low_weights_pruning.h  quality_loss_pruning.h  random_pruning.h  score_loss_pruning.h  skip_pruning.h
include/optimization/pre_learning/: pre_learning_opt.h
include/pruning/: ensemble_pruning.h
include/scoring/opt/: converter.h
include/utils/: bitarray.h  fileutils.h  listqsort.h  maxheap.h  mergesorter.h  omp-stubs.h  paramsmap.h  qsort.h  radix.h  strutils.h  symmatrix.h  transpose.h
lib/catch/include/: catch.hpp
mn_scorer/script/: runme_building.sh  scorer.hpp
mn_scorer/src/: dpset.hpp  main.cpp  scorer.cpp  xmlparser.cpp
mn_scorer/src/utils/: symmatrix.hpp
scripts/pruning/: cleaver-merge-model.py
src/: lm.cc  main.cc  main.cpp  makefile  makefile.macosx  provaXML.cc  quicklearn.cc  quickrank.cc  quickscore.cc  rds.cpp  test.cpp  test.out.best.xml
src/data/: dataset.cc  ltrdata.cc  queryresults.cc  rankedresults.cc  vertical_dataset.cc
src/driver/: driver.cc
src/io/: generate_conditional_operators.cc  generate_oblivious.cc  generate_vpred.cc  svml.cc  vpred.cc  xml.cc
src/learning/: dpset.cc  dpset.hpp  lambdamart.cc  lmart.cc  lmart.hpp  ltr_algorithm.cc  ltr_algorithm_factory.cc  matrixnet.cc  matrixnet.hpp  ranker.cc  ranker.hpp
src/learning/custom/: custom_ltr.cc
src/learning/forests/: dart.cc  lambdamart.cc  lambdamartsampling.cc  lambdamartsampling2.cc  lambdamartselective.cc  mart.cc  matrixnet.cc  obliviouslambdamart.cc  obliviousmart.cc  randomforest.cc  rankboost.cc  stochasticnegative.cc
src/learning/linear/: coordinate_ascent.cc  line_search.cc
src/learning/meta/: meta_cleaver.cc
src/learning/tree/: ensemble.cc  ensemble.hpp  histogram.cc  histogram.hpp  ot.cc  ot.hpp  rt.cc  rt.hpp  rtnode.cc  rtnode.hpp  rtnode_histogram.cc
src/metric/: dcgscorer.cc  dcgscorer.hpp  evaluator.cc  evaluator.hpp  mapscorer.cc  mapscorer.hpp  metricscorer.hpp  ndcgscorer.cc  ndcgscorer.hpp
src/metric/ir/: dcg.cc  map.cc  ndcg.cc  rmse.cc  tndcg.cc
src/opt/: converter.cc
src/optimization/: optimization.cc  optimization_factory.cc
src/optimization/post_learning/cleaver/: cleaver.cc  cleaver_factory.cc  last_pruning.cc  (+7 more)
src/pruning/: ensemble_pruning.cc
src/scoring/: ranker.cc  scoring.cc
src/scoring/opt/: converter.cc
src/utils/: bitarray.cc  bitarray.hpp  cpuinfo.hpp  listqsort.hpp  main.cpp  makefile  maxheap.hpp  mergesorter.cc  mergesorter.hpp  omp-stubs.cc  omp-stubs.h  qsort.cc  qsort.hpp  radix.cc  radix.hpp  strutils.cc  strutils.hpp  symmatrix.hpp  test.cpp  transpose.cc  transpose.hpp  trie.hpp
src/utils/learning/: dpset.hpp  lmart.hpp  mart.hpp
src/utils/metric/: dcgscorer.hpp  metricscorer.hpp
tests/: makefile
unit-tests/: test-main.cc
unit-tests/data/: test-hdata.cc
unit-tests/io/: test-xml-io.cc  test-xml-load.cc
unit-tests/learning/: test-product.cc  test-sorting.cc  test-xml-load.cc
unit-tests/learning/forests/: test-lambdamart.cc  test-mart.cc  test-obliviousmart.cc  test-obvlambdamart.cc  test-rankboost.cc
unit-tests/learning/linear/: test-ca.cc  test-line_search.cc
unit-tests/metric/ir/: test-dcg.cc  test-ndcg.cc  test-tndcg.cc
(+18 files in other folders)
